Remove rule methods and fix comment treatment.