@@ -1,12 +1,10 @@
 package de.dfki.mlt.rudimant.compiler;
 
-import java.io.IOException;
-import java.io.Writer;
-import java.util.Iterator;
 import java.util.LinkedList;
 import java.util.List;
 
 import de.dfki.mlt.rudimant.common.Position;
+import de.dfki.mlt.rudimant.compiler.tree.GrammarFile;
 import de.dfki.mlt.rudimant.compiler.tree.RudiTree;
 
 public class TokenHandler {
@@ -14,81 +12,45 @@ public class TokenHandler {
   private LinkedList<Token> tokens;
   private LinkedList<Token> commentTokens;
 
-  // in this list, keep all comments that belong to methods or rules that
-  // are not evaluated into the process method
-  private LinkedList<Token> savedComments;
-
   public TokenHandler(LinkedList<Token> tokz, LinkedList<Token> ctokz) {
     tokens = tokz;
     commentTokens = ctokz;
-    savedComments = new LinkedList<>();
   }
 
-  private static String removeJavaBrackets(String c){
-    // Deal with java code comments
-    if (c.startsWith("/*@")) {
-      c = c.substring(3, c.length() - 3);
-    }
-    return c;
-  }
-
-  /** Print commments that should be positioned before any generated code */
-  public void initialComments(Position firstPos, Writer out)
-      throws IOException {
-    Iterator<Token> it = commentTokens.iterator();
-    while (it.hasNext()) {
-      Token curr = it.next();
-      if (curr.getStart().getCharpos() < firstPos.getCharpos()
-          && curr.getText().startsWith("/*@")) {
-        out.append(removeJavaBrackets(curr.getText()));
-        it.remove();
-      } else break;
-    }
-  }
-
-
-  /** Save comments that belong to a postponed part of the code onto another
-   *  list (all before pos)
+  /** Attach comment tokens to the RudiTree item immediately after the token.
+   *
+   *  This may result in multiple attachments if the RudiTree items are moved
+   *  or start at the exact same position.
+   *
+   * This code assumes that preorder traversal also reflects the order in the
+   * file.
    */
-  public void saveCommentsForLater(Position pos) {
-    while (!commentTokens.isEmpty()
-        && commentTokens.get(0).getStart().getCharpos() < pos.getCharpos()) {
-      savedComments.addFirst(commentTokens.get(0));
-      commentTokens.remove();
-    }
-  }
-
-  /** put the saved comments back onto the original list for processing */
-  public void pourBackSavedComments() {
-    while (!savedComments.isEmpty()) {
-      commentTokens.addFirst(savedComments.getFirst());
-      savedComments.removeFirst();
-    }
-  }
-
-  /** check if there are comment tokens which should be put into the compiled
-   *  Java output file
-   * @param firstPos
-   * @param out
-   * @throws IOException
-   */
-  public void checkComments(Position firstPos, Writer out) throws IOException {
-    Iterator<Token> it = commentTokens.iterator();
-    Token next;
-    boolean content = false;
-    while (it.hasNext()
-        && (next = it.next()).getStart().getCharpos() < firstPos.getCharpos()) {
-      it.remove();
-      String comment = next.getText();
-      comment = removeJavaBrackets(comment);
-      if (!comment.trim().isEmpty()) {
-        out.append(comment);
-        content = true;
+  private void attachRec(RudiTree r, List<Token> comments) {
+    r.comments = new LinkedList<>();
+    Token t;
+    while(! comments.isEmpty()
+        && (t = comments.get(0)).getEnd().getCharpos()
+        <= r.getLocation().getBegin().getCharpos()) {
+      if (! t.getText().isBlank()) {
+        r.comments.add(t);
       }
+      comments.remove(0);
     }
-    if (content) out.append('\n');
+    for (RudiTree dtr : r.getDtrs()) {
+      attachRec(dtr, comments);
+    }
   }
 
+  /** The top level needs to be treated slightly differently from the rest */
+  public void attachComments(GrammarFile gf) {
+    List<Token> comments = new LinkedList<>();
+    comments.addAll(commentTokens);
+    for(RudiTree r : gf.getDtrs()) {
+      attachRec(r, comments);
+    }
+    // What's left is assigned to the GrammarFile
+    gf.comments = comments;
+  }
 
   /** find the position of the token that starts at or immediately after pos */
   private int indexOf(List<Token> tokens, Position start) {
